# learning-rust

./: .gitignore  README.md
src/001-hello-world/src/: main.rs
src/002-string-format/: Cargo.toml
src/002-string-format/src/: main.rs
src/003-urcc-variables/: Cargo.toml
src/003-urcc-variables/src/: main.rs
src/004-urcc-functions/: Cargo.toml
src/005-urcc-simple-types/: Cargo.toml
src/005-urcc-simple-types/src/: lib.rs  main.rs
src/006-urcc-control-flow-strings/: Cargo.toml
src/006-urcc-control-flow-strings/src/: main.rs
src/007-urcc-ownership-references/: Cargo.toml
src/007-urcc-ownership-references/src/: main.rs
src/008-structs-traits/: Cargo.toml
src/008-structs-traits/src/: main.rs
src/009-urcc-collections-enums/: Cargo.toml
src/009-urcc-collections-enums/src/: main.rs
src/010-urcc-closures-threads/: Cargo.toml
src/010-urcc-closures-threads/src/: main.rs
src/011-urcc-final/: Cargo.toml
src/011-urcc-final/src/: frame.rs  invaders.rs  lib.rs  main.rs  player.rs  render.rs  shot.rs
src/ur2-001-idiomatic-rust/: Cargo.toml
src/ur2-001-idiomatic-rust/src/: main.rs
src/ur2-002-documentation/: Cargo.toml
src/ur2-002-documentation/src/: lib.rs
src/ur2-003-closures-iterators/: Cargo.toml
src/ur2-003-closures-iterators/src/: main.rs
src/ur2-004-traits/: Cargo.toml
src/ur2-004-traits/src/: main.rs
src/ur2-005-errors/: Cargo.toml
src/ur2-005-errors/src/: lib.rs  main.rs
src/ur2_006_testing/: Cargo.toml
src/ur2_007_logging/: Cargo.toml
src/ur2_007_logging/src/: lib.rs  main.rs
src/ur2_008_multithreading/: Cargo.toml
(+4 files in other folders)
